--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
         <section>
             <div class="sectContainer" id="section2">
 
-                <h2>Section 2</h2>
+                <h2>MINI JEU</h2>
 
-                <button id="btnStartMiniJeu">Start</button>
+                <button id="btnStartMiniJeu">Start</button> <br>
+                <button id="btnCloseMiniJeu">Reset le score</button>
 
                 <div id="containerCenter">
                     <div class="container_chara">
@@ -96,7 +97,7 @@
                         </div>
 
                         <div class="containerColumn">
-                            <label id="scoreLabel" for="score">Score :</label>
+                            <label id="scoreLabel" for="score">Score</label>
                             <div id="score" name="score"><span id="scoreRed">0</span> - <span id="scoreBlue">0</span></div>
                             <h3 id="numberToBeFound">0</h3>
                         </div>
